[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfmate"
version = "0.3.2"
description = "A fast Codeforces CLI tool for fetching problems and testing competitive programming solutions"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { file = "LICENSE" }

authors = [
  { name = "Saksham Tale" }
]

keywords = ["codeforces", "competitive-programming", "cli"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
]


dependencies = [
    "typer[all]>=0.12",
    "rich>=13.7",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "playwright>=1.40",
    "prompt-toolkit>=3.0",
    "rapidfuzz>=2.0"
]


[project.scripts]
cf = "cf_tool.cli:app"

[project.urls]
Homepage = "https://github.com/Saksham-cmd-tech/cf_tool"
Repository = "https://github.com/Saksham-cmd-tech/cf_tool.git"
Issues = "https://github.com/Saksham-cmd-tech/cf_tool/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cf_tool*"]
